Tue Feb  4 20:44:24 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Thu Nov  7 15:25:03 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* sclient.c (argv): Check the error return from
 		krb5_init_context(), and print an error message if
 		necessary.

Tue Sep 10 14:09:01 1996  Tom Yu  <tlyu@mit.edu>

	* sclient.M: remove ".so man1/header.doc"

Mon Sep 18 05:05:48 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* sclient.c (main): Set the default service name to SAMPLE_SERVICE.

Sat Sep 16 03:40:41 1995  Theodore Y. Ts'o  <tytso@dcl>

	* sclient.c (main): Add an optional third argument which allows
		the user to set the Kerberos service name to be used.

Fri Jul 7 15:46:11 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove all explicit library handling and LDFLAGS.
	* configure.in - Add KRB5_LIBRARIES.

Tue Jun 20 13:16:10 1995  Tom Yu  (tlyu@dragons-lair)

	* configure.in: added missing check for stdlib.h

Thu Jun 15 17:38:55 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
	* configure.in - Add shared library usage check.

Sat Jun 10 22:58:15 1995  Tom Yu  (tlyu@dragons-lair)

	* sclient.c: krb5_auth_context redefinitions

Fri Jun  9 18:27:44 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Wed May 10 15:13:09 1995  Ezra Peisach  (epeisach@kangaroo.mit.edu)

	* sclient.c: Include <stdlib.h> if present on system. Else define
		malloc. 

Fri Mar 24 23:49:22 1995  Theodore Y. Ts'o  <tytso@dcl>

	* sclient.c (main): Initialize auth_context to NULL before calling
	        sendauth().

Fri Mar 10 11:09:34 1995  Chris Provenzano (proven@mit.edu)

        * sclient.c Use new calling convention for krb5_sendauth().

Thu Mar  2 12:27:22 1995  Theodore Y. Ts'o  <tytso@dcl>
